Replace logo and add About section
Updated the header logo to use a placeholder image for GitHub Pages and added an About section describing the Funko Community.

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <!-- 1. Хедер (Header) --><header class="sticky top-0 z-50 bg-funko-dark-bg shadow-2xl border-b border-gray-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex justify-between items-center">
             <!-- Логотип --><a href="t.me/funkocommunity" target="_blank" class="flex items-center">
-                <!-- Використання наданого логотипу -->
-                <img src="uploaded:image_a36886.jpg-a0e99f80-8fd5-4093-a453-22a4f0fd8af3" alt="Логотип Funko Community" class="h-12 sm:h-14 filter drop-shadow-lg shadow-neon-blue">
+                <!-- Використання логотипу-плейсхолдера для GitHub Pages -->
+                <img src="https://placehold.co/100x56/00A3C9/121212?text=FUNKO+COM" alt="Логотип Funko Community" class="h-12 sm:h-14 filter drop-shadow-lg shadow-neon-blue rounded-lg">
             </a>
             
             <!-- Навігація та CTA --><nav class="hidden md:flex items-center space-x-6">
@@ -191,7 +191,20 @@
         </div>
     </section>
 
-    <!-- 4. Секція: Заклик до дії (Call to Action) --><section class="bg-funko-card-bg py-16 text-center border-t border-gray-800">
+    <!-- 4. Секція: Про Спільноту (About Section) --><section id="about" class="py-16 sm:py-24 bg-funko-dark-bg border-t border-gray-800">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+            <h2 class="text-4xl font-extrabold text-funko-text-light mb-8">
+                <span class="text-funko-primary-accent">Про</span> Нашу Спільноту
+            </h2>
+            <div class="max-w-3xl mx-auto text-lg space-y-6 text-funko-text-mid">
+                <p>Наша Funko Community — це найбільше об'єднання україномовних колекціонерів, де панує дружня атмосфера та взаємодопомога. Ми об'єднані однією пристрастю: колекціонуванням фігурок Funko Pop! та інших лінійок.</p>
+                <p>Незалежно від того, чи ви новачок, який шукає першу фігурку, чи досвідчений колекціонер, що полює на рідкісні "chase" екземпляри, ви знайдете тут однодумців. Ми допомагаємо з ідентифікацією фейків, обміном, спільними замовленнями та завжди в курсі останніх новин зі світу Funko.</p>
+                <p class="font-bold text-funko-text-light">Приєднуйтесь до нас, щоб разом збільшувати наші колекції та знання!</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- 5. Секція: Заклик до дії (Call to Action) --><section class="bg-funko-card-bg py-16 text-center border-t border-gray-800">
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
             <h3 class="text-3xl font-bold text-funko-text-light mb-6">
                 Не зволікай! Приєднайся до спільноти, де розуміють твоє захоплення.
@@ -202,7 +215,7 @@
         </div>
     </section>
 
-    <!-- 5. Футер (Footer) --><footer class="bg-funko-dark-bg text-funko-text-mid py-8 border-t border-funko-primary-accent/30">
+    <!-- 6. Футер (Footer) --><footer class="bg-funko-dark-bg text-funko-text-mid py-8 border-t border-funko-primary-accent/30">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <div class="space-x-6 text-2xl mb-4">
                 <!-- Посилання на Telegram --><a href="t.me/funkocommunity" target="_blank" class="hover:text-funko-primary-accent transition duration-300">🔗 Telegram</a>
